--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body style="margin:0; padding: 0; box-sizing: border-box;" class="bg-light">
     <!-- Nav Bar -->
     <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="#"><img class="img-fluid w-25" src="https://drive.google.com/uc?id=1MheKOj7TQVdzIsPzVW4aG2R2cewM4QU-/view?usp=drivesdk"></img></a>
+        <a class="navbar-brand" href="#"><img class="img-fluid w-25" src="https://drive.google.com/uc?id=1MheKOj7TQVdzIsPzVW4aG2R2cewM4QU-"></img></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -154,7 +154,7 @@
       <div class="row mr-auto footer-icon">
         <div class="col-sm-1 col-md-4 col-lg-4">
           <div class="row mr-auto">
-            <img class="img-fluid col-sm-1 col-md-6 col-lg-2" src="https://drive.google.com/uc?id=1MheKOj7TQVdzIsPzVW4aG2R2cewM4QU-/view?usp=drivesdk"></img>
+            <img class="img-fluid col-sm-1 col-md-6 col-lg-2" src="https://drive.google.com/uc?id=1MheKOj7TQVdzIsPzVW4aG2R2cewM4QU-"></img>
             <p class="h1">DusMinute</p>
           </div>
           <div>
