--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <h1 id="ourFeature" class="text-center">Our Features</h1>      
       <div class="container">        
         <div class="row">            
-            <div class="col-lg-4 col-sm-4 py-2">
+            <div class="col-lg-4 col-md-4 col-sm-4 py-2">
                 <div class="card h-100 border-primary">
                     <img class="card-img-top" src="https://drive.google.com/uc?id=1KwH6lp1R8ef8UAiB1MXTTJzEbz76tcyR" alt="discount image">
                     <div class="card-body">
@@ -59,7 +59,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-sm-4 py-2">
+            <div class="col-lg-4 col-md-4 col-sm-4 py-2">
                 <div class="card h-100 border-primary">
                     <img class="card-img-top" src="https://drive.google.com/uc?id=1L8WVCPtXod0LaSO8mN0aX0LU9upvDC0X" alt="discount image">
                     <div class="card-body">
@@ -67,7 +67,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-sm-4 py-2">
+            <div class="col-lg-4 col-md-4 col-sm-4 py-2">
                 <div class="card h-100 border-primary">
                     <img class="card-img-top" src="https://drive.google.com/uc?id=1MQu1Qdew7H-E04FtKIIXB4oYfImN1E0-" alt="discount image">
                     <div class="card-body">
