--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     <h1 class="bold-heading2">DusMinute Mega Drives
     <strong class="green-color">Service drives for your community</strong></h1>
     <div class="col-md-12 explore-pkg-btn-box col-xs-12 text-center margin-top-20">
-    <a class="explore-pkg-btn" onclick="ScrollTo('gmc-packages')">Explore Packages</a>
+    <a style="color: #ffffff;" class="explore-pkg-btn" onclick="ScrollTo('gmc-packages')">Explore Packages</a>
     </div>
     </div>
     <div class="col-md-6">
