--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dusminute - Drives</title>
-  <link rel="icon" href="/home/user/dusminute/code/frontend/admin/public/images/favicon/apple-touch-icon.png"
+  <link rel="icon" href="https://drive.google.com/uc?id=1MheKOj7TQVdzIsPzVW4aG2R2cewM4QU-"
     type="image/x-icon">
   <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="/assets/oldassset/assets/css/animate.min.css">
