--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <h1 class="bold-heading2">DusMinute mega drives
       <strong class="green-color">Service event for your community</strong></h1>
       <div class="col-md-12 explore-pkg-btn-box col-xs-12 text-center margin-top-20">
-      <a href="#driveSection" class="explore-pkg-btn" onclick="ScrollTo('gmc-packages')">Book Drives</a>
+      <a href="#driveSection" class="explore-pkg-btn">Book Drives</a>
       </div>
       </div>
       <div class="col-md-6">
