--- a/index.html
+++ b/index.html
@@ -803,24 +803,24 @@ a:active, a:hover {
             </li>
             <li class="col-md-3 col-sm-12">
               <div class="cards">
-                <img alt="Intelligent algorithm" src="./assest/trust.svg" height="45px">
+                <img alt="Intelligent algorithm" src="https://www.gapoon.com/assets/images/home-page/work-2.svg" height="45px">
                 <p>One stop home maintenance services</p>
               </div>
             </li>
             <li class="col-md-3 col-sm-12">
               <div class="cards">
-                <img alt="Intelligent algorithm" src="./assest/trust.svg" height="45px">
+                <img alt="Intelligent algorithm" src="https://www.gapoon.com/assets/images/home-page/work-4.svg" height="45px">
                 <p>Dedicated experts team</p>
               </div>
             </li>             
             <li class="col-md-3 col-sm-12">
               <div class="cards">
-                <img alt="Intelligent algorithm" src="./assest/trust.svg" height="45px">
+                <img alt="Intelligent algorithm" src="https://www.gapoon.com/assets/images/home-page/work-1.svg" height="45px">
                 <p>Dedicated relationship manager</p>
               </div>
               <li class="col-md-3 col-sm-12">
                 <div class="cards">
-                  <img alt="Intelligent algorithm" src="./assest/trust.svg" height="45px">
+                  <img alt="Intelligent algorithm" src="./assest/hand-sanitizer.svg" height="45px">
                   <p>Covid-19 safety Measures ensured</p>
                 </div>
             </li>
