--- a/index.html
+++ b/index.html
@@ -777,7 +777,7 @@ a:active, a:hover {
 
       <div class="container mob-container padding-0">        
         <div class="customize-tools">
-          <h2 class="home-h2">Why subscriber for services drives?
+          <h2 class="home-h2">Why subscribe for services drives?
             <h3 style="margin-top: -0.3%;" class="text-muted text-center">Services drives concept is similar to "Group Buying" of quality services at significantly reduced prices for the limited period            
             </h3>
             <div style="margin-top: -1%;" class="section-header-underline"></div>
