--- a/index.html
+++ b/index.html
@@ -1084,9 +1084,9 @@ a:active, a:hover {
                 <div class="col-md-3 append-box">
                   <h2 class=" text-center margin-top-10 append-mob-heading">Added Items</h2>
                   <div class="col-md-12 text-center cart-empty margin-top-30" style="display: none;">
-                    <p class="grey">Your Cart is Empty!</p>
+                    <!-- <p class="grey">Your Cart is Empty!</p>
                     <img class=" margin-top-10" src="/assets/images/service-page/empty_cart.png" height="104">
-                  </div>
+                  </div> -->
                   <div id="serviceCartItem" class="service-cart col-md-12 padding-0">                    
                   </div>
                   <div class="col-md-12 text-center padding-0" id="book-btn-box" style="display: block;" hidden="">
@@ -5844,6 +5844,8 @@ var drives = [
 
 
       // && tdd <= ddd && tmm <= dmm
+
+      console.log(today, driveDate)
       
       if(item[communityUserSelect] && today >= driveDate) {
         
